# Dofbot_gesture_control

./: .gitignore  README.md
dofbot_description/: CMakeLists.txt  package.xml
dofbot_description/config/: display.rviz  gazebo_controllers.yaml
dofbot_description/launch/: display.launch.py  gazebo.launch.py  moveit.launch.py
dofbot_description/meshes/: Arm1_Link.stl  Arm2_Link.stl  Arm4_Link.stl  Arm5_Link.stl  DaBai_DCW2_Link.stl  Gripping_point_Link.stl  base_link.stl  llink1.stl  llink2.stl  llink3.stl  rlink1.stl  rlink2.stl  rlink3.stl
dofbot_description/scripts/: gz_control.py
dofbot_description/urdf/: dofbot.urdf.xacro  dofbot_gazebo.xacro  dofbot_joints.xacro  dofbot_links.xacro  dofbot_ros2control.xacro  dofbot_transmission.xacro
dofbot_description/worlds/: world.sdf
dofbot_gesture_control/: CMakeLists.txt  package.xml
dofbot_gesture_control/launch/: gesture_control.launch.py
dofbot_gesture_control/scripts/: dofbot_hand_follower.py  gesture_control_node.py  hand_tracker.py
dofbot_gesture_control/src/: hand_follower.cpp
dofbot_hw/: CMakeLists.txt  package.xml
dofbot_hw/scripts/: interface.py
dofbot_moveit_config/: .setup_assistant  package.xml
dofbot_moveit_config/config/: dofbot.ros2_control.xacro  dofbot.srdf  initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
dofbot_pick_place/: CMakeLists.txt  package.xml
dofbot_pick_place/launch/: pick_place.launch.py
dofbot_pick_place/src/: pick_place.cpp  pick_place_test.cpp
dofbot_vision/: CMakeLists.txt  package.xml
dofbot_vision/scripts/: block_detect.py  block_tf.py
rs_pointcloud/: CMakeLists.txt  package.xml
rs_pointcloud/scripts/: rs_pointcloud.py
